Fixed Hero On Mobile

--- a/Projects/Live Sites/Greek Pitas/style.css
+++ b/Projects/Live Sites/Greek Pitas/style.css
@@ -53,7 +53,8 @@ a {
 nav {
     height: 60px;
     width: 90%;
-    border-bottom: 2px solid var(--tertiary-color);
+    border: 2px solid var(--tertiary-color);
+    border-top: 0;
     position: fixed;
     top: 0px;
     left: calc((100vw - 90%) / 2);
@@ -111,7 +112,7 @@ nav {
     }
 
     #background-image {
-        height: 960px;
+        height: 1000px;
         width: 100%;
         left: 0;
     }
@@ -240,6 +241,10 @@ main {
 }
 
 @media screen and (max-width: 1000px) {
+    h1.menu {
+        margin-top: 40px;
+    }
+
     #menu-list {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(5, 1fr);
@@ -293,6 +298,10 @@ h1.specials {
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
+.specials p {
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
 @media screen and (max-width: 1000px) {
     #specials-list {
         grid-template-columns: repeat(1, 1fr);
@@ -309,8 +318,9 @@ footer {
 #copyright {
     display: inline-block;
     position: relative;
-    top: calc(100% - 60px);
+    top: 100px;
     left: 5px;
+    padding-bottom: 10px;
 }
 
 #copyright p {
